test/types/void/void-variable-use-2.chpl
var v: void;
v = 1;
